Removed Paywhirl Payment pages

--- a/_includes/panels-mastering.html
+++ b/_includes/panels-mastering.html
@@ -8,10 +8,11 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Expert feedback included</p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>Revisions until you are satisfied</p></div>
+      <div class="panel-item"><p><b>Reduced rates for larger projects</b></p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Turnarounds on your schedule</p></div>
-      <a class="btn btn-default btn-panel" href="/payment/calculators/mastering/"><h3>Calculate price</h3></a>
+      <a class="btn btn-default btn-panel" href="/contact/"><h3>Contact Us</h3></a>
+      <!-- <a class="btn btn-default btn-panel" href="/payment/calculators/mastering/"><h3>Contact Us</h3></a> -->
 
   </div>
 
@@ -22,7 +23,7 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Expert feedback included</p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>Revisions until you are satisfied</p></div>
+      <div class="panel-item"><p>Keep yourself on track with monthly masters</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Turnarounds on your schedule</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/mastering/"><h3>Start</h3></a>
