--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -11,7 +11,7 @@
     <a href="#reviews">Reviews</a>
     <a href="/our-work/">Our Work</a>
     <!-- <a href="/blog/">Blog</a> -->
-    <a href="/login/">Login</a>
+    <a href="/blog/">Blog</a>
     </p>
   </div>
 
